BYKL-725 Alignment problem fixed

--- a/LMS.App/ClientApp/src/styles.css
+++ b/LMS.App/ClientApp/src/styles.css
@@ -1570,7 +1570,11 @@ textarea.ht_96 {
 
 .classes-grid .school-grid-footer.above-thumbnail {
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   z-index: 9;
 }
 
